--- a/LibraryApp/Views/Book/Details.cshtml
+++ b/LibraryApp/Views/Book/Details.cshtml
@@ -7,4 +7,6 @@ O książce
     <h3>@Model.Title</h3>
 
     <p>@Model.Name @Model.LastName</p>
+
+    <img src="~/images/@Model.Image" height="400" width="400"/>
 </div>
