Added Copy Model with operations

--- a/LibraryApp/Views/Author/Edit.cshtml
+++ b/LibraryApp/Views/Author/Edit.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
      ViewData["Title"] = "Edytuj dane autora";
 }
-Edytowanie autora
 
 <div class="p-4">
     <form asp-controller="Author" asp-action="Edit" method="post">
-        <h1>Dodaj autora</h1>
+        <h3>Edytuj autora</h3>
         
         <div class="form-group">
             <label for="Name">Imię</label><br>
