--- a/LibraryApp/Views/Book/Details.cshtml
+++ b/LibraryApp/Views/Book/Details.cshtml
@@ -10,3 +10,9 @@ O książce
 
     <img src="~/images/@Model.Image" height="400" width="400"/>
 </div>
+
+
+Lista ezgemplarzy
+<ul>
+    <li></li>
+</ul>
