--- a/LibraryApp/Views/Copy/Index.cshtml
+++ b/LibraryApp/Views/Copy/Index.cshtml
@@ -1,6 +1,11 @@
-﻿@{
-     ViewData["Title"] = "Książki";
+﻿@model CopyViewModel
+@{
 }
+
+
+książka
+<h5>@Model.Title</h5>
+
 
 @if (@TempData["Alert"] != null)
 {
@@ -18,12 +23,11 @@
     }
 }
 
+lista egzemplarzy
 <div class="container">
-    @if (User.IsInRole("Admin"))
-    {
         <div class="row p-2">
             <div class="col-5">
-                <a class="btn btn-primary" asp-controller="Book" asp-action="Create">Dodaj książkę</a>
+                <a class="btn btn-primary" asp-route-id="@Model.BookId" asp-controller="Copy" asp-action="Create">Dodaj egzemplarz</a>
             </div>
             <div class="col-7 d-flex justify-content-end">
                 <label class="form-label me-3 align-self-center">Kategoria</label>
@@ -56,18 +60,22 @@
         </div>
 
         <ul class="list-group mt-4">
-            @foreach (var book in Model)
+            @foreach (var copy in @Model.Copies)
             {
                 <li class="list-group-item d-flex justify-content-between">
                     <div class="align-self-center">
-                        <a class="text-decoration-none text-dark" asp-route-id="@book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@book.Title</strong></a><br>
-                        <small class="small">@book.Name @book.LastName</small>
+                        <a class="text-decoration-none text-dark"><strong class="mb-1">@copy.Number</strong></a>
+                        @if (copy.Status=="0"){
+                            <a class="text-decoration-none text-dark">Niedostępna</a>
+                        }
+                        else if (copy.Status=="1"){
+                            <a class="text-decoration-none text-dark">Dostępna</a>
+                        }
                     </div>
                     <div class="align-self-center">
-                        <a class="btn btn-outline-primary" asp-route-id="@book.Id" asp-controller="Copy" asp-action="Index">Egzemlarze</a>
-                        <a class="btn btn-outline-primary" asp-route-id="@book.Id" asp-controller="Book" asp-action="Edit">Edytuj</a>
+                        <a class="btn btn-outline-primary" asp-route-id="@copy.Id" asp-controller="Copy" asp-action="Edit">Edytuj</a>
                         <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">Usuń</a>
-                        <form asp-route-id="@book.Id" asp-controller="Book" asp-action="Delete" method="post">
+                        <form asp-route-id="@copy.Id" asp-controller="Copy" asp-action="Delete" method="post">
                             <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
                               <div class="modal-dialog">
                                 <div class="modal-content">
@@ -76,7 +84,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                   </div>
                                   <div class="modal-body">
-                                    Czy na pewno usunąć książkę?
+                                    Czy na pewno usunąć egzemplarz?
                                   </div>
                                   <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
@@ -90,58 +98,4 @@
                 </li>    
             }
         </ul>
-    }
-    else
-    {
-        <div class="row p-2">
-            <div class="col-12 d-flex justify-content-end">
-                <label class="form-label me-3 align-self-center">Kategoria</label>
-                <select class="form-control w-25">
-                    <option value="">Wszystko</option>
-                    @for (int i = 0; i < @ViewBag.Categories.Count; i++)
-                    {
-                        <option value="@i">@ViewBag.Categories[@i]</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="row p-2">
-            <div class="col-5">
-                <form class="d-flex">
-                    <label class="form-label me-3 align-self-center">Wyszukiwanie</label> 
-                    <input class="form-control me-2" type="search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-            <div class="col-7 d-flex justify-content-end">
-                <label class="form-label me-3 align-self-center">Sortowanie</label>
-                <select class="form-control w-25">
-                    @for (int i = 0; i < @ViewBag.Sort.Count; i++)
-                    {
-                        <option value="@i">@ViewBag.Sort[@i]</option>
-                    }
-                </select>
-            </div>
-        </div>
-
-        <ul class="list-group mt-4">
-            @foreach (var book in Model)
-            {
-                <li class="list-group-item d-flex justify-content-between">
-                    <div class="align-self-center">
-                        <a class="text-decoration-none text-dark" asp-route-id="@book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@book.Title</strong></a><br>
-                        <small class="small">@book.Name @book.LastName</small>
-                    </div>
-                </li>    
-            }
-        </ul>
-    }
-
-    <div class="row">
-        <div class="col-md-4">
-            <div class="">
-
-            </div>
-        </div>
-    </div>
 </div>
