--- a/LibraryApp/Views/Book/Details.cshtml
+++ b/LibraryApp/Views/Book/Details.cshtml
@@ -1,18 +1,106 @@
-﻿@{
+﻿@model BookAuthorCopyViewModel
+@{
      ViewData["Title"] = "O książce";
 }
 
 O książce
 <div>
-    <h3>@Model.Title</h3>
+    <h3>@Model.Book.Title</h3>
 
-    <p>@Model.Name @Model.LastName</p>
+    <p>@Model.Author.Name @Model.Author.LastName</p>
 
-    <img src="~/images/@Model.Image" height="400" width="400"/>
+    <img src="~/images/@Model.Book.Image" height="400" width="400"/>
 </div>
 
+@if (@TempData["Alert"] != null)
+{
+    if (@TempData["Alert"]?.ToString() == "Success")
+    {
+        <div class="alert alert-success" role="alert">
+            Akcja została wykonana pomyślnie!
+        </div>
+    }
+    else if (@TempData["Alert"]?.ToString() == "Danger")
+    {
+        <div class="alert alert-danger" role="alert">
+            Wystąpił błąd! Akcja nie została wykonana!
+        </div>
+    }
+}
 
-Lista ezgemplarzy
-<ul>
-    <li></li>
-</ul>
+lista egzemplarzy
+<div class="container">
+        <div class="row p-2">
+            <div class="col-5">
+                <a class="btn btn-primary" asp-route-id="@Model.Book.Id" asp-controller="Copy" asp-action="Create">Dodaj egzemplarz</a>
+            </div>
+            <div class="col-7 d-flex justify-content-end">
+                <label class="form-label me-3 align-self-center">Kategoria</label>
+                <select class="form-control w-25">
+                    <option value="">Wszystko</option>
+                    @for (int i = 0; i < @ViewBag.Categories.Count; i++)
+                    {
+                        <option value="@i">@ViewBag.Categories[@i]</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="row p-2">
+            <div class="col-5">
+                <form class="d-flex">
+                    <label class="form-label me-3 align-self-center">Wyszukiwanie</label> 
+                    <input class="form-control me-2" type="search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+            <div class="col-7 d-flex justify-content-end">
+                <label class="form-label me-3 align-self-center">Sortowanie</label>
+                <select class="form-control w-25">
+                    @for (int i = 0; i < @ViewBag.Sort.Count; i++)
+                    {
+                        <option value="@i">@ViewBag.Sort[@i]</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+        <ul class="list-group mt-4">
+            @foreach (var Copy in @Model.Copies)
+            {
+                <li class="list-group-item d-flex justify-content-between">
+                    <div class="align-self-center">
+                        <a class="text-decoration-none text-dark"><strong class="mb-1">@Copy.Number</strong></a>
+                        @if (Copy.Status=="0"){
+                            <a class="text-decoration-none text-dark">Niedostępna</a>
+                        }
+                        else if (Copy.Status=="1"){
+                            <a class="text-decoration-none text-dark">Dostępna</a>
+                        }
+                    </div>
+                    <div class="align-self-center">
+                        <a class="btn btn-outline-primary" asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Edit">Edytuj</a>
+                        <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">Usuń</a>
+                        <form asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Delete" method="post">
+                            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                              <div class="modal-dialog">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel">Usuwanie</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                  </div>
+                                  <div class="modal-body">
+                                    Czy na pewno usunąć egzemplarz?
+                                  </div>
+                                  <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
+                                    <button type="submit" class="btn btn-danger">Usuń</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                        </form>
+                    </div>
+                </li>    
+            }
+        </ul>
+</div>
