--- a/LibraryApp/Views/Book/Edit.cshtml
+++ b/LibraryApp/Views/Book/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookViewModel
+﻿@model BookCreateEditViewModel
 @{
      ViewData["Title"] = "Edytuj książkę";
 }
@@ -25,20 +25,20 @@
         
         <div class="mb-3">
             <label for="Title">Tytuł</label><br>
-            <input id="Title" name="Title" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.Title" required/>
+            <input id="Title" name="Book.Title" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.Book.Title" required/>
         </div>
 
         <div class="mb-3">
             <label for="Author">Autor</label><br>
-            <select id="Author" name="Author" class="form-control">
+            <select id="Author" name="Book.AuthorId" class="form-control">
                 <option value="">Wybierz autora</option>
-                @foreach (var author in @Model.Authors)
+                @foreach (var Author in @Model.Authors)
                 {
-                    @if (@author.Id == @Model.AuthorId){
-                        <option value="@author.Id" selected>@author.Name @author.LastName</option>
+                    @if (@Author.Id == @Model.Book.AuthorId){
+                        <option value="@Author.Id" selected>@Author.Name @Author.LastName</option>
                     }
                     else {
-                        <option value="@author.Id">@author.Name @author.LastName</option>
+                        <option value="@Author.Id">@Author.Name @Author.LastName</option>
                     }
                 }
             </select>
@@ -46,13 +46,13 @@
         
         <div class="mb-3">
             <label for="Description">Opis</label><br>
-            <input id="Description" name="Description" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.Description" required/>
+            <input id="Description" name="Book.Description" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.Book.Description" required/>
         </div>
 
         <div class="mb-3">
             <label for="File">Obraz</label><br>
             <input id="File" name="File" type="file" class="form-control-file" onchange="preview();" minlength="3" maxlength="100" >
-            <img id="ImagePreview" name="ImagePreview" src="~/images/@Model.Image"  height="100" width="100"/>
+            <img id="ImagePreview" name="ImagePreview" src="~/images/@Model.Book.Image"  height="100" width="100"/>
         </div>
 
         <script>
@@ -63,12 +63,12 @@
 
         <div class="mb-3">
             <label for="Year">Rok</label><br>
-            <input id="Year" name="Year" type="number" class="form-control" minlength="3" maxlength="100" value="@Model.Year" required/>
+            <input id="Year" name="Book.Year" type="number" class="form-control" minlength="3" maxlength="100" value="@Model.Book.Year" required/>
         </div>
 
         <div class="mb-3">
             <label for="City">Miasto</label><br>
-            <input id="City" name="City" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.City" required/>
+            <input id="City" name="Book.City" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.Book.City" required/>
         </div>
         
         <button class="btn btn-primary" type="submit">Zapisz</button>
