--- a/LibraryApp/Views/Book/Index.cshtml
+++ b/LibraryApp/Views/Book/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model BookAuthorViewModel
+@{
      ViewData["Title"] = "Książki";
 }
 
@@ -56,18 +57,18 @@
         </div>
 
         <ul class="list-group mt-4">
-            @foreach (var book in Model)
+            @foreach (var Book in Model.Books)
             {
                 <li class="list-group-item d-flex justify-content-between">
                     <div class="align-self-center">
-                        <a class="text-decoration-none text-dark" asp-route-id="@book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@book.Title</strong></a><br>
-                        <small class="small">@book.Name @book.LastName</small>
+                        <a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@Book.Title</strong></a><br>
+                        <small class="small">@Book.Author.Name @Book.Author.LastName</small>
                     </div>
                     <div class="align-self-center">
-                        <a class="btn btn-outline-primary" asp-route-id="@book.Id" asp-controller="Copy" asp-action="Index">Egzemlarze</a>
-                        <a class="btn btn-outline-primary" asp-route-id="@book.Id" asp-controller="Book" asp-action="Edit">Edytuj</a>
+                        <a class="btn btn-outline-primary" hidden asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details">Egzemplarze</a>
+                        <a class="btn btn-outline-primary" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Edit">Edytuj</a>
                         <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">Usuń</a>
-                        <form asp-route-id="@book.Id" asp-controller="Book" asp-action="Delete" method="post">
+                        <form asp-route-id="@Book.Id" asp-controller="Book" asp-action="Delete" method="post">
                             <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
                               <div class="modal-dialog">
                                 <div class="modal-content">
@@ -125,12 +126,12 @@
         </div>
 
         <ul class="list-group mt-4">
-            @foreach (var book in Model)
+            @foreach (var Book in Model.Books)
             {
                 <li class="list-group-item d-flex justify-content-between">
                     <div class="align-self-center">
-                        <a class="text-decoration-none text-dark" asp-route-id="@book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@book.Title</strong></a><br>
-                        <small class="small">@book.Name @book.LastName</small>
+                        <a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@Book.Title</strong></a><br>
+                        <small class="small">@Book.Author.Name @Book.Author.LastName</small>
                     </div>
                 </li>    
             }
