--- a/LibraryApp/Views/Copy/Create.cshtml
+++ b/LibraryApp/Views/Copy/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CopyViewModel
+﻿@model CopyCreateEditViewModel
 @{
     ViewData["Title"] = "Dodaj egzemplarz";
 }
@@ -25,12 +25,12 @@
         
         <div class="mb-3">
             <label for="Number">Numer</label><br>
-            <input id="Number" name="Number" type="text" class="form-control" minlength="3" maxlength="100" required>
+            <input id="Number" name="Copy.Number" type="text" class="form-control" minlength="3" maxlength="100" required>
         </div>
 
         <div class="mb-3">
             <label for="Status">Status</label><br>
-            <select id="Status" name="Status" class="form-control">
+            <select id="Status" name="Copy.Status" class="form-control">
                 @for (int i = 0; i < @ViewBag.Categories.Count; i++)
                 {
                     <option value="@i">@ViewBag.Categories[@i]</option>
