--- a/LibraryApp/Views/Author/Index.cshtml
+++ b/LibraryApp/Views/Author/Index.cshtml
@@ -23,16 +23,16 @@
     </div>
     
     <ul class="list-group mt-4">
-        @foreach (var author in Model)
+        @foreach (var Author in Model)
         {
             <li class="list-group-item d-flex justify-content-between">
                 <div class="align-self-center">
-                    <a class="text-decoration-none text-dark" asp-route-id="@author.Id" asp-controller="Author" asp-action="Details"><strong class="mb-1">@author.Name @author.LastName</strong></a><br>
+                    <a class="text-decoration-none text-dark" asp-route-id="@Author.Id" asp-controller="Author" asp-action="Details"><strong class="mb-1">@Author.Name @Author.LastName</strong></a><br>
                 </div>
                 <div class="align-self-center">       
-                    <a class="btn btn-outline-primary" asp-route-id="@author.Id" asp-controller="Author" asp-action="Edit">Edytuj</a>
+                    <a class="btn btn-outline-primary" asp-route-id="@Author.Id" asp-controller="Author" asp-action="Edit">Edytuj</a>
                     <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">Usuń</a>
-                    <form asp-route-id="@author.Id" asp-controller="Author" asp-action="Delete" method="post">
+                    <form asp-route-id="@Author.Id" asp-controller="Author" asp-action="Delete" method="post">
                         <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
                           <div class="modal-dialog">
                             <div class="modal-content">
